sj - fix bug where if there is a ScrollContainer that has `shadow` in effect (contents are longer than the size) and there is a Dropdown opened over the shadow area, the shadow shows over the Dropdown even though the rest of the Dropdown shows over the ScrollContainer.  Make Scrollcontainer z-index lower than that of Dropdown
This is a conflict of z-indexes
ScrollContainer is 20000
https://github.com/appfolio/react-gears/blob/af912f49058f4c2fd8c8895698b3865cffd5faa5/src/components/ScrollContainer.scss#L11

Dropdown is 1000
https://github.com/twbs/bootstrap/blob/1238734922f915da825e4fd61c7ee0e9d4a6473f/scss/_variables.scss#L809

--- a/src/components/ScrollContainer.scss
+++ b/src/components/ScrollContainer.scss
@@ -8,7 +8,7 @@
   right: 0px;
   pointer-events: none;
   position: absolute;
-  z-index: 20000; // TODO test
+  z-index: 990; // must be lower than Dropdown
 }
 
 $r: 8px;
